small fix z-index

--- a/src/pages/Products/components/ItemBlock/ItemBlock.scss
+++ b/src/pages/Products/components/ItemBlock/ItemBlock.scss
@@ -193,7 +193,6 @@
         outline: 0;
       }
       .ScoreBtn {
-        z-index: 100;
         height: 35px;
         line-height: 35px;
         &:hover {
